--- a/FMLeikmenn/FMLeikmenn.csproj
+++ b/FMLeikmenn/FMLeikmenn.csproj
@@ -182,6 +182,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512191059392_InitialCreate.cs" />
+    <Compile Include="Migrations\201512191059392_InitialCreate.Designer.cs">
+      <DependentUpon>201512191059392_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512232214276_Leikmadur.cs" />
+    <Compile Include="Migrations\201512232214276_Leikmadur.Designer.cs">
+      <DependentUpon>201512232214276_Leikmadur.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201512232235266_TeamPlayerContractedTo.cs" />
+    <Compile Include="Migrations\201512232235266_TeamPlayerContractedTo.Designer.cs">
+      <DependentUpon>201512232235266_TeamPlayerContractedTo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Leikmadur.cs" />
@@ -299,6 +312,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201512191059392_InitialCreate.resx">
+      <DependentUpon>201512191059392_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512232214276_Leikmadur.resx">
+      <DependentUpon>201512232214276_Leikmadur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512232235266_TeamPlayerContractedTo.resx">
+      <DependentUpon>201512232235266_TeamPlayerContractedTo.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
