Added Golkeper model controller and view

--- a/FMLeikmenn/FMLeikmenn.csproj
+++ b/FMLeikmenn/FMLeikmenn.csproj
@@ -176,6 +176,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GoalKeepersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeikmadursController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -196,6 +197,7 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\GoalKeeper.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Leikmadur.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -301,6 +303,11 @@
     <Content Include="Views\Leikmadurs\Edit.cshtml" />
     <Content Include="Views\Leikmadurs\Index.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
+    <Content Include="Views\GoalKeepers\Create.cshtml" />
+    <Content Include="Views\GoalKeepers\Delete.cshtml" />
+    <Content Include="Views\GoalKeepers\Details.cshtml" />
+    <Content Include="Views\GoalKeepers\Edit.cshtml" />
+    <Content Include="Views\GoalKeepers\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
